# chainsweep

./: .gitignore  Cargo.toml  LICENSE  README.md  SETUP.md
chainsweep/: Cargo.toml
chainsweep/src/: field.rs  lib.rs  main.rs  sweeper.rs
counter/: Cargo.toml  README.md
frontend/: nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  wagmi.config.ts
frontend/components/: GameBoard.vue  Header.vue  Main.vue  w3Connect.vue
frontend/data/: abi.json
frontend/services/: chain.ts  constants.ts
frontend/src/: generated.ts
frontend/styles/: main.scss
nft/: Cargo.toml
nft/src/: erc721.rs  lib.rs
scripts/: deploy_game.sh  deploy_testnet.sh  fund_accounts.sh  gen_abi.sh  test_counter.sh  test_nft.sh
src/: main.rs
