[package]
name = "chainsweep"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/mathijs81/scaling-ethereum-2024"
repository = "https://github.com/mathijs81/scaling-ethereum-2024"
keywords = ["arbitrum", "ethereum", "stylus", "scaling", "hackathon"]
description = "Chainsweep: an on-chain game on Arbitrum Stylus"

[dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
#stylus-sdk = { version = "0.4.3", features = ["debug"] }
stylus-sdk = "0.4.3"
mini-alloc = "0.4.2"
fastrand = { version = "2.0.2", default-features = false }

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"
debug = 0
debug-assertions = false
incremental = false
