[package]
name = "scaling-ethereum"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/mathijs81/scaling-ethereum-2024"
repository = "https://github.com/mathijs81/scaling-ethereum-2024"
keywords = ["arbitrum", "ethereum", "stylus", "scaling", "hackathon"]
description = "Submission for Scaling Ethereum 2024 hackathon"

[dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
stylus-sdk = "0.4.3"
hex = "0.4.3"
rustmate = "0.1.0"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"
debug = false
rpath = false
debug-assertions = false
incremental = false
